<resources>
    <string name="app_name">Appet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Text login-->
    <string name="usert">User</string>
    <string name="password">Password</string>
    <string name="passwordReset">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="registreAcount">Create new account in Appet</string>
    <string name="accountsLogin">Use accounts</string>
    <string name="connectFacebook">Connect with Facebook</string>
    <string name="connectGmail">Connect with Gmail</string>

    <!--Text Acoount-->
    <string name="titleAccount">New acconunt</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="birthDate">Birth date</string>
    <string name="sex">Gender</string>
    <string name="female">Female</string>
    <string name="male">male</string>

    <string name="city">City</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Text menu-->
    <string name="Places_DogFriendly">Places DogFriendly</string>
    <string name="hikes">Hikes</string>
    <string name="Social_Club">Social Club</string>
    <string name="Nutrition">Nutrition</string>
    <string name="Health">Health</string>
    <string name="Profile">Profile</string>
    <string name="Timeline">Timeline</string>
    <string name="Settings">Settings</string>


</resources>
