<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/layout_login">

    <ImageView

        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imgInformation"
        android:src="@drawable/icon_information"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:contentDescription="imgInformation" />

    <ImageView

        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imgLogo"
        android:src="@drawable/icon_appet"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:contentDescription="imgLogo" />

    <RelativeLayout
        android:id="@+id/containerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/imgLogo"

        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/backgroundContainerButton"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/connectFacebook"
                android:id="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="3dp"

                android:gravity="center" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imgFacebook"
                android:src="@drawable/icon_facebook"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/backgroundContainerButton"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView3"
                android:src="@drawable/icon_gmail"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/connectGmail"
                android:id="@+id/textView3"
                android:layout_margin="3dp"
                android:gravity="center" />

        </LinearLayout>
    </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_margin="3dp"
            android:layout_below="@+id/containerButton">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:contentDescription="icon_user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/icon_user"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/imgUser" />
                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/editUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgUser"
                    android:layout_toRightOf="@+id/imgUser"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/usert"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:contentDescription="imgPassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/imgUser"
                    android:src="@drawable/icon_security"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/imgPassword" />
                <EditText
                    android:id="@+id/edpassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgPassword"
                    android:layout_toRightOf="@+id/imgPassword"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/password"

                    android:layout_margin="10dp"
                    />
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:background="@color/button"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:enabled="false"
                    android:layout_below="@+id/imgPassword"
                    />
                <TextView
                    android:id="@+id/textregistreAcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registreAcount"
                    android:layout_margin="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_horizontal"
                    android:textSize="14dp"
                    android:padding="10dp"
                    android:layout_below="@+id/btnLogin"

                    />
                <TextView
                    android:id="@+id/textResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordReset"
                    android:layout_margin="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_horizontal"
                    android:textSize="14dp"
                    android:padding="10dp"
                    android:layout_below="@+id/textregistreAcount"

                    />

            </RelativeLayout>
        </ScrollView>




</RelativeLayout>

